Sharing .env file, updating US scripts and README.md

--- a/.env
+++ b/.env
@@ -8,20 +8,12 @@
 #                   | |
 #                   |_|
 ## Bespoken Virtual Device: YAML Test Script Demo
-## Skill name: Bring! Shopping List
-## Test scope: Invoke add items intent
+## Configuration file: This file is available so you can play with Bespoken Virtual Device test scripts and check how
+##                     they work. To really use it, you need to follow the instructions showed in the README file.
 ## =====================================================================================================================
-config:
-  locale: en-US
-  voiceID: Joey
 
-# Sequence 01. Test scenario: Invoke intent, no further interaction
-"open bring and add apples and oranges":
-  transcript: "ok* apples and oranges is on your list*"
-
-# Sequence 02. Test scenario: Invoke intent, one interaction
-"open bring": "welcome to bring how can i help"
-"add cheese and wine":
-  transcript: "ok* cheese and wine is on your *"
-"read my list": "*"
-
+VIRTUAL_DEVICE_TOKEN_DE_DE=aca96605-764e-4fda-90bf-4570513df245
+VIRTUAL_DEVICE_TOKEN_EN_GB=cc32efe5-743a-4102-825f-d22af45ed43b
+VIRTUAL_DEVICE_TOKEN_EN_US=f7e91d64-0477-427c-95b6-15cade37a323
+VIRTUAL_DEVICE_BASE_URL=https://virtual-device.bespoken.io
+BATCH_MODE=true
