--- a/en-US/STML.03_RemoveItems.test.yml
+++ b/en-US/STML.03_RemoveItems.test.yml
@@ -17,16 +17,17 @@ configuration:
   invoker: VirtualDeviceInvoker
   locale: en-US
   virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
+  invocationName: bring
 
-#---
-#- test: "Sequence 01. Test scenario: Invoke intent removing items, no further interaction"
-#- "open bring and remove apples and oranges": "ok* i have removed apples and oranges"
+---
+- test: "Sequence 01. Test scenario: Invoke intent removing items, no further interaction"
+- "open bring and remove apples and oranges": "ok* i have removed apples and oranges"
 
 ---
 - test: "Sequence 02. Test scenario: Invoke intent remove items in different interaction"
 - "open bring": "welcome to bring how can i help"
 - "what is on my list":
-  - response.outputSpeech.ssml: "milk"
-  - response.outputSpeech.ssml: "cheese and wine"
-  - response.outputSpeech.ssml: "apples"
+  - prompt: "milk"
+  - prompt: "cheese and wine"
+  - prompt: "apples"
 - "remove cheese and wine": "* i have removed cheese and wine *"
