Updating the banner, moving the invoker setting to the JSON config file, refactoring test script names

--- a/en-US/launchRequest.e2e.yml
+++ b/en-US/launchRequest.e2e.yml
@@ -6,7 +6,8 @@
 #                                             /___/
 #
 # Created by Bespoken
-# Learn more at https://read.bespoken.io/unit-testing/getting-started/
+# Learn more at https://read.bespoken.io/end-to-end/getting-started/
+# >>> If you need assistance please chat with us here: https://apps.bespoken.io/dashboard (lower right-hand corner)
 #
 # Skill name: "Bring! Shopping List" by Bring! Labs AG
 # Test scope: Skill invocation, focus on first part of interaction
@@ -14,7 +15,6 @@
 
 ---
 configuration:
-  invoker: VirtualDeviceInvoker
   locale: en-US
   virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
   invocationName: bring
