--- a/en-US/addItems.e2e.yml
+++ b/en-US/addItems.e2e.yml
@@ -16,16 +16,21 @@
 ---
 configuration:
   locale: en-US
+  voiceId: Joey
   virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
   invocationName: bring
 
 ---
 - test: "Sequence 01. Test scenario: Invoke intent adding items, no further interaction"
-- "open bring and add apples and oranges": "* apples and oranges *"
+- open bring and add apples and oranges: "* apples and oranges *" # One-shot utterances close the session after they are invoked.
 
 ---
-- test: "Sequence 02. Test scenario: Invoke intent adding items in different interaction"
-- "open bring": "*"
-- "add cheese and wine": "ok* cheese and wine is on your *"
-- "read my list": "you have * cheese and wine * apples and oranges *"
+- test: "Sequence 02. Test scenario: Check apples and oranges are on the list"
+- open bring and read my list: you have the following items on your list * apples and oranges *
+
+---
+- test: "Sequence 03. Test scenario: Invoke intent adding items in different interaction"
+- open bring: "*"
+- add cheese and wine: ok cheese and wine is on your *
+- read my list: you have * cheese and wine *
 
