--- a/de-DE/addItems.e2e.yml
+++ b/de-DE/addItems.e2e.yml
@@ -10,31 +10,23 @@
 # >>> If you need assistance please chat with us here: https://apps.bespoken.io/dashboard (lower right-hand corner)
 #
 # Skill name: "Bring! Shopping List" by Bring! Labs AG
-# Test scope: Skill invocation and removing items
+# Test scope: Skill invocation, focus on first part of interaction
 #=====================================================================================================================
 
 ---
 configuration:
-  locale: en-US
-  voiceId: Joey
-  virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
+  locale: de-DE
+  voiceId: Hans
+  virtualDeviceToken: 3e936290-e255-4719-b099-f45fffae923c
   invocationName: bring
 
 ---
-- test: "Sequence 01. Test scenario: Invoke intent adding items, no further interaction"
-- open bring and add lettuce: "* lettuce *" # One-shot utterances like these closes the session after the interaction.
+- test: "Sequence 01. Test scenario: Invoke intent with one-shot utterance (adding items)"
+- öffne bring und füge obst hinzu: okay obst ist auf deiner liste
 
 ---
-- test: "Sequence 02. Test scenario: Invoke intent removing items, no further interaction"
-- open bring and remove lettuce: ok i have removed lettuce
+- test: "Sequence 02. Test scenario: Invoke intent, multiple interactions (adding items)"
+- öffne bring: willkommen
+- füge gemüse: okay gemüse ist auf deiner liste
+- sag mir was auf meiner liste ist: obst * gemüse
 
----
-- test: "Sequence 03. Test scenario: Invoke intent remove items in different interaction"
-- open bring: welcome to bring how can i help
-- add figs: okay figs is on your *
-- what is on my list:
-  - prompt:
-    - milk
-    - figs
-    - apples
-- remove figs: "* i have removed figs *"
