--- a/en-GB/launchRequest.e2e.yml
+++ b/en-GB/launchRequest.e2e.yml
@@ -10,31 +10,31 @@
 # >>> If you need assistance please chat with us here: https://apps.bespoken.io/dashboard (lower right-hand corner)
 #
 # Skill name: "Bring! Shopping List" by Bring! Labs AG
-# Test scope: Skill invocation and removing items
+# Test scope: Skill invocation, focus on first part of interaction
 #=====================================================================================================================
 
 ---
 configuration:
-  locale: en-US
-  voiceId: Joey
-  virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
+  locale: en-GB
+  voiceId: Amy
+  virtualDeviceToken: cc32efe5-743a-4102-825f-d22af45ed43b
   invocationName: bring
 
 ---
-- test: "Sequence 01. Test scenario: Invoke intent adding items, no further interaction"
-- open bring and add lettuce: "* lettuce *" # One-shot utterances like these closes the session after the interaction.
+- test: "Sequence 01. Test scenario: launch request, no further interaction"
+- open bring: welcome to bring
 
 ---
-- test: "Sequence 02. Test scenario: Invoke intent removing items, no further interaction"
-- open bring and remove lettuce: ok i have removed lettuce
-
----
-- test: "Sequence 03. Test scenario: Invoke intent remove items in different interaction"
-- open bring: welcome to bring how can i help
-- add figs: okay figs is on your *
+- test: "Sequence 02. Test scenario: launch request, one interaction (card not present in skill, just for demo purposes)"
+- open bring:
+  - prompt: welcome to bring
+  - reprompt: undefined
+  - card: undefined
 - what is on my list:
   - prompt:
     - milk
-    - figs
+    - eggs
     - apples
-- remove figs: "* i have removed figs *"
+  - cardTitle: "This is the content of your list:"
+  - cardContent: "Milk‌\nEggs"
+  - cardImageURL: "https://s3-eu-west-1.amazonaws.com/bring-images/images/1200x800.jpg"
