--- a/en-GB/removeItems.e2e.yml
+++ b/en-GB/removeItems.e2e.yml
@@ -15,9 +15,9 @@
 
 ---
 configuration:
-  locale: en-US
-  voiceId: Joey
-  virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
+  locale: en-GB
+  voiceId: Amy
+  virtualDeviceToken: cc32efe5-743a-4102-825f-d22af45ed43b
   invocationName: bring
 
 ---
@@ -26,15 +26,15 @@ configuration:
 
 ---
 - test: "Sequence 02. Test scenario: Invoke intent removing items, no further interaction"
-- open bring and remove lettuce: ok i have removed lettuce
+- open bring and remove lettuce: okay i have removed lettuce
 
 ---
 - test: "Sequence 03. Test scenario: Invoke intent remove items in different interaction"
 - open bring: welcome to bring how can i help
-- add figs: okay figs is on your *
+- add carrots: okay carrots is on your *
 - what is on my list:
   - prompt:
     - milk
-    - figs
+    - carrots
     - apples
-- remove figs: "* i have removed figs *"
+- remove carrots: "* i have removed carrots *"
