--- a/en-US/launchRequest.e2e.yml
+++ b/en-US/launchRequest.e2e.yml
@@ -16,24 +16,25 @@
 ---
 configuration:
   locale: en-US
+  voiceId: Joey
   virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
   invocationName: bring
 
 ---
 - test: "Sequence 01. Test scenario: launch request, no further interaction"
-- "open bring": "welcome to bring"
+- open bring: welcome to bring
 
 ---
 - test: "Sequence 02. Test scenario: launch request, one interaction (card not present in skill, just for demo purposes)"
-- "open bring":
-  - prompt: "welcome to bring"
+- open bring:
+  - prompt: welcome to bring
   - reprompt: undefined
   - card: undefined
-- "what is on my list":
+- what is on my list:
   - prompt:
-    - "milk"
-    - "eggs"
-    - "apples"
+    - milk
+    - eggs
+    - apples
   - cardTitle: "This is the content of your list:"
   - cardContent: "Milk‌\nEggs"
   - cardImageURL: "https://s3-eu-west-1.amazonaws.com/bring-images/images/1200x800.jpg"
