Updating readme.md and minor changes to scripts

--- a/de-DE/launchRequest.e2e.yml
+++ b/de-DE/launchRequest.e2e.yml
@@ -18,7 +18,6 @@ configuration:
   locale: de-DE
   voiceId: Hans
   virtualDeviceToken: 3e936290-e255-4719-b099-f45fffae923c
-  invocationName: bring
 
 ---
 - test: "Sequence 01. Test scenario: launch request, no further interaction"
@@ -31,5 +30,5 @@ configuration:
 
 ---
 - test: "Sequence 02. Test scenario: launch request, one interaction"
-- öffne bring: "*"
+- öffne bring: willkommen
 - sag mir was auf meiner liste ist: du hast folgendes auf deiner liste
