Removing quotes from scripts

--- a/de-DE/addItems.e2e.yml
+++ b/de-DE/addItems.e2e.yml
@@ -20,11 +20,11 @@ configuration:
   virtualDeviceToken: 3e936290-e255-4719-b099-f45fffae923c
 
 ---
-- test: "Sequence 01. Test scenario: Invoke intent with one-shot utterance (adding items)"
+- test: Invoke intent with one-shot utterance (adding items)
 - öffne bring und füge obst hinzu: okay obst ist auf deiner liste
 
 ---
-- test: "Sequence 02. Test scenario: Invoke intent, multiple interactions (adding items)"
+- test: Invoke intent, multiple interactions (adding items)
 - öffne bring: willkommen
 - füge gemüse: okay gemüse ist auf deiner liste
 - sag mir was auf meiner liste ist: obst * gemüse
