--- a/en-US/launchRequest.e2e.yml
+++ b/en-US/launchRequest.e2e.yml
@@ -20,11 +20,11 @@ configuration:
   virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
 
 ---
-- test: "Sequence 01. Test scenario: launch request, no further interaction"
+- test: Launch request, no further interaction
 - open bring: welcome to bring
 
 ---
-- test: "Sequence 02. Test scenario: launch request, one interaction (card not present in skill, just for demo purposes)"
+- test: Launch request, one interaction (card not present in skill, just for demo purposes)
 - open bring:
   - prompt: welcome to bring
   - reprompt: undefined
