--- a/en-US/removeItems.e2e.yml
+++ b/en-US/removeItems.e2e.yml
@@ -20,15 +20,15 @@ configuration:
   virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
 
 ---
-- test: "Sequence 01. Test scenario: Invoke intent adding items, no further interaction"
+- test: Invoke intent adding items, no further interaction
 - open bring and add lettuce: "* lettuce *" # One-shot utterances like these closes the session after the interaction.
 
 ---
-- test: "Sequence 02. Test scenario: Invoke intent removing items, no further interaction"
+- test: Invoke intent removing items, no further interaction
 - open bring and remove lettuce: ok i have removed lettuce
 
 ---
-- test: "Sequence 03. Test scenario: Invoke intent remove items in different interaction"
+- test: Invoke intent remove items in different interaction
 - open bring: welcome to bring how can i help
 - add figs: okay figs is on your *
 - what is on my list:
