Improving scripts with latest best practices document

--- a/de-DE/addItems.e2e.yml
+++ b/de-DE/addItems.e2e.yml
@@ -27,5 +27,7 @@ configuration:
 - test: Invoke intent, multiple interactions (adding items)
 - öffne bring: willkommen
 - füge gemüse: okay gemüse ist auf deiner liste
-- sag mir was auf meiner liste ist: obst * gemüse
-
+- sag mir was auf meiner liste ist:
+  - prompt:
+    - obst
+    - gemüse
