--- a/en-GB/removeItems.e2e.yml
+++ b/en-GB/removeItems.e2e.yml
@@ -21,19 +21,19 @@ configuration:
 
 ---
 - test: Invoke intent adding items, no further interaction
-- open bring and add lettuce: "* lettuce *" # One-shot utterances like these closes the session after the interaction.
+- open bring and add lettuce: lettuce is on your list # One-shot utterances like these closes the session after the interaction.
 
 ---
 - test: Invoke intent removing items, no further interaction
-- open bring and remove lettuce: okay i have removed lettuce
+- open bring and remove lettuce: i have removed lettuce
 
 ---
 - test: Invoke intent remove items in different interaction
 - open bring: welcome to bring how can i help
-- add carrots: okay carrots is on your *
+- add carrots: okay carrots is on your list
 - what is on my list:
   - prompt:
     - milk
     - carrots
     - apples
-- remove carrots: "* i have removed carrots *"
+- remove carrots: i have removed carrots
