--- a/en-US/launchRequest.e2e.yml
+++ b/en-US/launchRequest.e2e.yml
@@ -16,12 +16,21 @@
 ---
 configuration:
   locale: en-US
-  voiceId: Joey
-  virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
+  voiceId: Joanna
 
 ---
 - test: Launch request, no further interaction
 - open bring: welcome to bring
+
+---
+- test: Launch request followed by sequence of interactions
+- open skill name: welcome to bring
+- what is on my list: you have the following items on your list *
+- add bananas to my list: okay bananas is on your list
+- goodbye:
+  - prompt:
+    - talk to you soon
+    - bye bye happy shopping
 
 ---
 - test: Launch request, one interaction (card not present in skill, just for demo purposes)
@@ -30,10 +39,7 @@ configuration:
   - reprompt: undefined
   - card: undefined
 - what is on my list:
-  - prompt:
-    - milk
-    - eggs
-    - apples
+  - prompt: you have the following items on your list
   - cardTitle: "This is the content of your list:"
   - cardContent: Milk‌\nEggs
   - cardImageURL: "https://s3-eu-west-1.amazonaws.com/bring-images/images/1200x800.jpg"
