Updating en-US scripts to support Google version of voice app. Updating readme.md. Removing en-GB

--- a/en-US/addItems.e2e.yml
+++ b/en-US/addItems.e2e.yml
@@ -11,25 +11,38 @@
 #
 # Skill name: "Bring! Shopping List" by Bring! Labs AG
 # Test scope: Skill invocation and add items
+# Platform  : Alexa and Google Assistant
+# Invocation name for Alexa: open bring
+# Invocation name for Google: talk to bring shopping list
 #=====================================================================================================================
 
 ---
 configuration:
   locale: en-US
-  voiceId: Joey
-  virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
+  voiceId: Joanna
 
 ---
 - test: Invoke intent adding items, no further interaction
-- open bring and add apples and oranges: apples and oranges # One-shot utterances close the session after they are invoked.
+- INVOCATION_NAME and add apples and oranges: # One-shot utterances close the session after they are invoked.
+  - prompt:
+    - apples and oranges 
+    - apples orange* # Google Action return the results separated with commas
 
 ---
 - test: Check apples and oranges are on the list
-- open bring and read my list: you have the following items on your list * apples and oranges
+- INVOCATION_NAME and read my list: 
+  - prompt:
+    - you have the following items on your list * apples and oranges
+    - here is your * list # For Google Action, card is not supported yet
 
 ---
 - test: Invoke intent adding items in different interaction
-- open bring: welcome
-- add cheese and wine: ok cheese and wine is on your list
-- read my list: you have the following items on your list * cheese and wine
-
+- INVOCATION_NAME
+- add cheese and wine: 
+  - prompt:
+    - ok cheese and wine is on your list
+    - cheese wine
+- read my list: 
+  - prompt:
+    - you have the following items on your list * cheese and wine
+    - here is your * list
