--- a/en-US/removeItems.e2e.yml
+++ b/en-US/removeItems.e2e.yml
@@ -11,29 +11,40 @@
 #
 # Skill name: "Bring! Shopping List" by Bring! Labs AG
 # Test scope: Skill invocation and removing items
+# Platform  : Alexa and Google Assistant
+# Invocation name for Alexa: open bring
+# Invocation name for Google: talk to bring shopping list
 #=====================================================================================================================
 
 ---
 configuration:
   locale: en-US
-  voiceId: Joey
-  virtualDeviceToken: f7e91d64-0477-427c-95b6-15cade37a323
+  voiceId: Joanna
 
 ---
 - test: Invoke intent adding items, no further interaction
-- open bring and add lettuce: lettuce is on your list # One-shot utterances like these closes the session after the interaction.
+- INVOCATION_NAME and add lettuce: 
+  - prompt:
+    - lettuce* on your list # One-shot utterances like these closes the session after the interaction.
+    - done
 
 ---
 - test: Invoke intent removing items, no further interaction
-- open bring and remove lettuce: i have removed lettuce
+- INVOCATION_NAME and remove lettuce: i have removed lettuce
 
 ---
 - test: Invoke intent remove items in different interaction
-- open bring: welcome to bring how can i help
-- add figs: figs is on your list
+- INVOCATION_NAME
+- add milk: 
+  - prompt:
+    - milk* on your list
+    - done
 - what is on my list:
   - prompt:
+    - bananas
     - milk
-    - figs
     - apples
-- remove figs: i have removed figs
+    - cheese
+    - here is your * list
+- yes
+- remove milk: i have removed milk
