--- a/de-DE/removeItems.e2e.yml
+++ b/de-DE/removeItems.e2e.yml
@@ -10,6 +10,7 @@
 # >>> If you need assistance please chat with us here: https://apps.bespoken.io/dashboard (lower right-hand corner)
 #
 # Skill name: "Bring! Shopping List" by Bring! Labs AG
+# Platform  : Alexa only
 # Test scope: Skill invocation, focus on first part of interaction
 #=====================================================================================================================
 
@@ -17,7 +18,6 @@
 configuration:
   locale: de-DE
   voiceId: Hans
-  virtualDeviceToken: 3e936290-e255-4719-b099-f45fffae923c
 
 ---
 - test: Adding items with one-shot utterance, no further interaction
